Validar la superficie

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Comandos</h2>
   <form id="auto-form"></form>
   <input type="text" placeholder="5,5/1,2N/IAIAIAIAA"> 
-  <input type="submit" value="Enviar" id="button-enviar"><br><br>
+  <input type="submit" value="Enviar" id="button-enviar"><br><br
   <label for="pos-inicial">Posicion inical: </label><br>
   <label for="comando">Comandos: </label><br>
   <label for="pos-final">Posicion final: </label>
