--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
   <h1>Juego Auto control a Remoto</h1>
   <h2>Comandos</h2>
-  <form id="auto-form"></form>
-  <input type="text" placeholder="5,5/1,2N/IAIAIAIAA"> 
-  <input type="submit" value="Enviar" id="button-enviar"><br><br
-  <label for="pos-inicial">Posicion inical: </label><br>
-  <label for="comando">Comandos: </label><br>
-  <label for="pos-final">Posicion final: </label>
-  <div id="resultado-div"></div>
+  <form id="auto-form">
+    <input type="text" id="entrada-comando" placeholder="5,5/1,2N/IAIAIAIAA"> 
+    <input type="submit" value="Enviar" id="button-enviar"><br><br>
+    <div id="pos-inicial"></div>
+    <div id="comandos"></div>
+    <div id="resultado-div"></div>
+  </form>
 
   <script type="module" src="./src/presenter.js"></script>
   
 </body>
 </html>
+
+<!--
+<label for="pos-inicial">Posición Inicial: </label><br>
+<label for="comandos">Comandos: </label><br>
+<label for="pos-final">Posición Final: </label><br>
+-->
