Cambio en la interfaz

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="resultado-div"></div>
   </form>
 
+  <p>Me gusta la f1</p>
+
   <script type="module" src="./src/presenter.js"></script>
   
 </body>
